--- a/AzureBattleground.Web/package.json
+++ b/AzureBattleground.Web/package.json
@@ -4,6 +4,7 @@
   "description": "Azure Battleground Web",
   "main": "index.js",
   "scripts": {
+    "start": "grunt start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
