--- a/AzureBattleground.Web/package.json
+++ b/AzureBattleground.Web/package.json
@@ -35,10 +35,12 @@
   "dependencies": {
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.8.5",
+    "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "semantic-ui-react": "^0.87.3"
   }
 }
