--- a/AzureBattleground.Web/package.json
+++ b/AzureBattleground.Web/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/TheCloudTheory/AzureBattleground#readme",
   "devDependencies": {
+    "connect-modrewrite": "^0.10.2",
     "grunt": "^1.0.4",
     "grunt-browserify": "^5.3.0",
     "grunt-contrib-connect": "^2.0.0",
