--- a/AzureBattleground.Web/package.json
+++ b/AzureBattleground.Web/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-markdown": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "semantic-ui-react": "^0.87.3"
   }
